# Finstaller

./: Cargo.toml  LICENSE  README.md
src/: jito.rs  logic.rs  main.rs  net.rs
