[package]
name = "finstaller"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
futures = "0.3"
anyhow = "1.0"
url = "2.2"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mimalloc = "0.1"

[profile.release]
lto = "fat"
strip = true
debug = "none"
panic = "abort"
opt-level = 3


